Ajustada emissao de nota de serviço em Barueri (#19)
* Ajustando arquivo de barueri.

* Adicionado tipo 3

* Criado o evento de envio tipo 4.

* Ajustado o evento de retorno tipo 1.

* Ajustado o evento de retorno tipo 2.

* Ajustado o evento de retorno tipo 3.

* Ajustado o evento de retorno tipo 4.

* Ajustado o evento de retorno tipo 9.

* Ajustado arquivo de retorno.

* Criando teste de envio de nota.

* Teste baixando o pdf da nota.

* Teste cancelando e baixando o pdf da nota cancelada.

* Ajustes dos testes.